--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@midudev/tailwind-animations": "^0.1.0",
     "astro": "^4.14.5",
     "tailwindcss": "^3.4.10"
   }
